--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -33,7 +33,14 @@
     />
 
     <div class="description">
-      Я поставил себе цель - хочу чтобы каждый, кто читает этот блог, у кого есть сейчас проблемы с деньгами, или желание вырасти в доходе мог это сделать также быстро с помощью РКО<br /><br />
+      Что ты получишь в гайде? <br /><br />
+
+      Информацию лично от меня <br /><br />
+
+      - Актуальные связки <br /><br />
+      - Топовую партнерку с повышенными ставками <br /><br />
+      - Пошаговый план на первые 100-150 к. <br /><br />
+      - 3 цельных статьи про трафик<br /><br /> <br /><br />
       🏦 Что такое РКО простыми словами <br /><br />
       РКО — это партнерские программы от банков, которые позволяют получить от 40 до 80к рублей за одного человека, все законно и легально (это не абуз) <br /><br />
       Система выглядит так: привел трафик на партнерки -  обработал лидов - получил свой кеш - построил команду и масштабируешь бизнес<br /><br />
