Update index.html in page_1

--- a/webapp/page_1/index.html
+++ b/webapp/page_1/index.html
@@ -19,7 +19,7 @@
   <div class="static-header"></div>
 
   <div class="container">
-    <div class="title">500.000+ ₽/месяц в 18!</div>
+    <div class="title">я решил протестировать смогу ли я вам помочь выйти на первые 100к за месяц</div>
 
     <img
       src="../1_page_photo.jpeg"
